--- a/index.html
+++ b/index.html
@@ -74,3 +74,20 @@
     <script src="script.js"></script>
 </body>
 </html>
+<section class="testimonials">
+    <div class="container">
+        <h2>Отзывы клиентов</h2>
+        <div class="testimonial-slider">
+            <div class="testimonial active">
+                <p>"Отличная работа! Дом был построен точно в срок."</p>
+                <p class="author">— Иван Петров</p>
+            </div>
+            <div class="testimonial">
+                <p>"Качество материалов и работы превзошло ожидания!"</p>
+                <p class="author">— Мария Сидорова</p>
+            </div>
+        </div>
+        <button class="prev">&#10094;</button>
+        <button class="next">&#10095;</button>
+    </div>
+</section>
