--- a/catalog.html
+++ b/catalog.html
@@ -30,3 +30,14 @@
         </div>
     </div>
 </section>
+<section class="gallery">
+    <div class="container">
+        <h2>Галерея домов</h2>
+        <div class="gallery-grid">
+            <img src="images/house1.jpg" alt="Дом 1">
+            <img src="images/house2.jpg" alt="Дом 2">
+            <img src="images/house3.jpg" alt="Дом 3">
+            <img src="images/house4.jpg" alt="Дом 4">
+        </div>
+    </div>
+</section>
