--- a/catalog.html
+++ b/catalog.html
@@ -1,3 +1,53 @@
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Каталог домов | Жилые дома в селе Кармаскалы</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header class="brick-wall">
+        <div class="container">
+            <h1>Каталог домов</h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Главная</a></li>
+                    <li><a href="catalog.html">Каталог домов</a></li>
+                    <li><a href="about.html">О застройщике</a></li>
+                    <li><a href="contacts.html">Контакты</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <main>
+        <section class="houses">
+            <div class="container">
+                <h2>Наши предложения</h2>
+                <div class="house-card">
+                    <img src="images/house1.jpg" alt="Дом 1">
+                    <h3>Дом №1</h3>
+                    <p>Площадь: 150 м², 3 спальни, гараж.</p>
+                    <p class="price">Цена: 5 000 000 ₽</p>
+                </div>
+                <div class="house-card">
+                    <img src="images/house2.jpg" alt="Дом 2">
+                    <h3>Дом №2</h3>
+                    <p>Площадь: 200 м², 4 спальни, бассейн.</p>
+                    <p class="price">Цена: 7 500 000 ₽</p>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer class="brick-wall">
+        <div class="container">
+            <p>&copy; 2023 Жилые дома в селе Кармаскалы. Все права защищены.</p>
+        </div>
+    </footer>
+</body>
+</html>
 <section class="filters">
     <div class="container">
         <h2>Фильтр домов</h2>
