--- a/index.html
+++ b/index.html
@@ -7,6 +7,46 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header class="brick-wall">
+        <div class="container">
+            <h1>Жилые дома в селе Кармаскалы</h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Главная</a></li>
+                    <li><a href="catalog.html">Каталог домов</a></li>
+                    <li><a href="about.html">О застройщике</a></li>
+                    <li><a href="contacts.html">Контакты</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <main>
+        <section class="hero">
+            <div class="container">
+                <h2>Постройте свой дом мечты!</h2>
+                <p>Мы предлагаем современные и комфортабельные дома в живописном селе Кармаскалы.</p>
+                <a href="catalog.html" class="btn">Посмотреть каталог</a>
+            </div>
+        </section>
+    </main>
+
+    <footer class="brick-wall">
+        <div class="container">
+            <p>&copy; 2023 Жилые дома в селе Кармаскалы. Все права защищены.</p>
+        </div>
+    </footer>
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Жилые дома в селе Кармаскалы | Современный дизайн</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
     <!-- Прелоадер -->
     <div id="preloader">
         <div class="spinner"></div>
