--- a/catalog.html
+++ b/catalog.html
@@ -26,13 +26,13 @@
             <div class="container">
                 <h2>Наши предложения</h2>
                 <div class="house-card">
-                    <img src="images/house1.jpg" alt="Дом 1">
+                    <img src="images/2232.jpg" alt="Дом 1">
                     <h3>Дом №1</h3>
-                    <p>Площадь: 150 м², 3 спальни, гараж.</p>
+                    <p>Площадь: 86 м², 3 спальни.</p>
                     <p class="price">Цена: 5 000 000 ₽</p>
                 </div>
                 <div class="house-card">
-                    <img src="images/house2.jpg" alt="Дом 2">
+                    <img src="images/2233.jpg" alt="Дом 2">
                     <h3>Дом №2</h3>
                     <p>Площадь: 200 м², 4 спальни, бассейн.</p>
                     <p class="price">Цена: 7 500 000 ₽</p>
@@ -84,10 +84,10 @@
     <div class="container">
         <h2>Галерея домов</h2>
         <div class="gallery-grid">
-            <img src="images/house1.jpg" alt="Дом 1">
-            <img src="images/house2.jpg" alt="Дом 2">
-            <img src="images/house3.jpg" alt="Дом 3">
-            <img src="images/house4.jpg" alt="Дом 4">
+            <img src="images/2232.jpg" alt="Дом 1">
+            <img src="images/2233.jpg" alt="Дом 2">
+            <img src="images/2232.jpg" alt="Дом 3">
+            <img src="images/2233.jpg" alt="Дом 4">
         </div>
     </div>
 </section>
